# feedworm

./: CLAUDE.md  README.md  pyproject.toml
src/feedworm/: __main__.py  article.py  cli.py  config.py  database.py  digest.py  downloader.py  email_import.py  feed_parser.py  spotify.py  transcriber.py
src/podworm/: cli.py  config.py  email_import.py  transcriber.py
tests/: test_email_html.py
