[project]
name = "feedworm"
version = "0.1.0"
description = "Digest podcasts (小宇宙/Spotify) and articles into daily summaries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "ddgs>=9.10.0",
    "feedparser>=6.0.12",
    "deepgram-sdk>=3.0.0",
    "httpx>=0.28.1",
    "rich>=14.3.1",
    "spotipy>=2.23.0",
    "sqlite-utils>=3.39",
    "edge-tts>=7.2.7",
    "python-dotenv>=1.0.0",
    "trafilatura>=1.12.0",
]

[project.scripts]
feedworm = "feedworm.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = true
